New way to find hour values